# enterprise-rag

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/alertmanager/: alertmanager.yml
deploy/docker/: otel-collector-config.yaml  tempo-config.yaml
deploy/grafana/dashboards/: rag-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yaml
deploy/grafana/provisioning/datasources/: datasources.yaml
deploy/helm/production-rag/: Chart.yaml  values-kind.yaml  values.yaml
deploy/helm/production-rag/templates/: _helpers.tpl  eval.yaml  generation.yaml  grafana.yaml  ingestion-worker.yaml  ingestion.yaml  minio.yaml  neo4j.yaml  opensearch.yaml  otel-collector.yaml  phoenix.yaml  qdrant.yaml  redis.yaml  retrieval.yaml  secrets.yaml  tempo.yaml  ui.yaml
deploy/loki/: loki-config.yaml
deploy/oracle/: SETUP-RETRY-LAUNCH.md  docker-compose.public.yml  retry-launch.config.json  retry-launch.ps1  setup.sh
deploy/prometheus/: alert-rules.yml  prometheus.yml
deploy/promtail/: promtail-config.yaml
deploy/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
services/eval/: Dockerfile  pyproject.toml  ragas-requirements.txt
services/eval/fixtures/: synthetic_eval_set.json
services/eval/rag_eval/: __init__.py  api.py  config.py  eval_runner.py  judges.py  main.py  pipeline_client.py  retrieval_gate.py  retrieval_metrics.py  schemas.py  synthetic_data.py
services/eval/scripts/: run_eval_gate.py  run_ragas_eval.py
services/eval/tests/: conftest.py  test_eval_runner.py  test_eval_runner_citation_grounding.py  test_judges.py  test_retrieval_metrics.py
services/generation/: Dockerfile  pyproject.toml
services/generation/rag_generation/: __init__.py  api.py  cache_embedder.py  compression.py  config.py  generation.py  guardrails.py  main.py  pipeline.py  prompt_builder.py  retrieval_client.py
services/generation/tests/: conftest.py  test_compression.py  test_feedback_endpoint.py  test_guardrails.py  test_pipeline_guardrails.py  test_pipeline_provenance.py  test_pipeline_semantic_cache.py  test_prompt_builder.py  test_ungrounded_citations.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/rag_ingestion/: __init__.py  api.py  chunking.py  colpali_index.py  config.py  contextual.py  embeddings.py  graph_extraction.py  main.py  object_storage.py  page_classifier.py  parsing.py  pipeline.py  pipeline_factory.py  tasks.py  vision.py
services/ingestion/tests/: conftest.py  test_api_file_path_containment.py  test_chunking.py  test_colpali_index.py  test_contextual.py  test_embeddings_batch_size.py  test_object_storage.py  test_page_classifier.py  test_pipeline.py  test_pipeline_colpali.py  test_pipeline_quantization.py  test_pipeline_searchable_text.py  test_tasks.py
services/retrieval/: Dockerfile  pyproject.toml
services/retrieval/rag_retrieval/: __init__.py  api.py  config.py  embeddings.py  fusion.py  graph_query.py  main.py  pipeline.py  query_expansion.py  reranker.py
services/retrieval/tests/: conftest.py  test_fusion.py  test_pipeline_corrective.py  test_pipeline_expand_query.py  test_query_expansion_decompose.py
spaces/: DEPLOY-TO-MODAL.md  DEPLOY-TO-SPACES.md  Dockerfile  README.md  app.py  modal_app.py  requirements.txt
spaces/static/: app.js  index.html  styles.css
ui/: Dockerfile  app.js  index.html  nginx.conf  styles.css
