[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-eval"
version = "0.1.0"
description = "Evaluation, RAG Triad LLM-judge scoring, synthetic dataset generation, and CI/CD gate + production sampling API for the Production RAG stack"
requires-python = ">=3.11"
dependencies = [
  "rag-core",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "structlog>=24.1,<25",
  "tenacity>=8.3,<9",
  "openai>=1.40,<2",
  "httpx>=0.27,<1",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "opentelemetry-api>=1.25,<2",
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-mock>=3.14,<4",
  "pytest-cov>=5.0,<6",
  "respx>=0.21,<1",
  "mypy>=1.13,<2",
  "ruff>=0.5,<1",
]

[tool.uv.sources]
rag-core = { path = "../../packages/rag_core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["rag_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
