[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-generation"
version = "0.1.0"
description = "Generation service for the Production RAG stack: context compression, Groq-based synthesis, structured-output citations, and guardrails"
requires-python = ">=3.11"
dependencies = [
  "rag-core",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "structlog>=24.1,<25",
  "tenacity>=8.3,<9",
  "openai>=1.40,<2",
  "httpx>=0.27,<1",
  # Cache-key embedding only (ADR-026 semantic answer cache): same model as
  # retrieval/ingestion so "semantically identical" is consistent stack-wide.
  "sentence-transformers>=3.0,<4",
  # Both transitive via sentence-transformers, which sets no floor of its
  # own (only transformers<5.0.0) — pin floors to stay off known-vulnerable
  # ranges (torch PYSEC-2025-203/204/206, CVE-2025-2999/3001; transformers
  # PYSEC-2025-217, PYSEC-2026-1977..1988/2290). See ADR-032.
  "torch>=2.10.0",
  "transformers>=4.53.0,<5",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "opentelemetry-api>=1.25,<2",
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-mock>=3.14,<4",
  "pytest-cov>=5.0,<6",
  "respx>=0.21,<1",
  "mypy>=1.13,<2",
  "ruff>=0.5,<1",
]

[tool.uv.sources]
rag-core = { path = "../../packages/rag_core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["rag_generation"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pytest's fixture/mark decorators are not fully resolvable under mypy
# --strict even with py.typed installed; this relaxes decorator-typing
# strictness for test files only. Production code in rag_generation/ has
# no such override and remains fully mypy-strict-compatible.
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
