[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-ingestion"
version = "0.1.0"
description = "Ingestion service for the Production RAG stack: parsing, chunking, embedding, and indexing"
requires-python = ">=3.11"
dependencies = [
  "rag-core[opensearch]",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "structlog>=24.1,<25",
  "tenacity>=8.3,<9",
  "pypdf>=6.7.3,<7",  # >=6.7.3 for GHSA-jm82-fx9c-mx94 and the other CVEs pip-audit flags below 6.7.x
  "sentence-transformers>=3.0,<4",
  # Both transitive via sentence-transformers, which sets no floor of its
  # own (only transformers<5.0.0); pin floors only (no new ceiling beyond
  # what sentence-transformers already requires) to keep the resolver off
  # known-vulnerable ranges: torch PYSEC-2025-203/204/206,
  # CVE-2025-2999/3001; transformers the RCE-via-untrusted-checkpoint
  # family (PYSEC-2025-217, PYSEC-2026-1977 through -1988, -2290).
  "torch>=2.10.0",
  "transformers>=4.53.0,<5",
  "openai>=1.40,<2",
  "neo4j>=5.20,<6",
  # ADR-014: S3-compatible object storage (MinIO locally, real S3 unchanged in prod).
  "boto3>=1.34,<2",
  # ADR-015: async ingestion job queue.
  "celery>=5.4,<6",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "opentelemetry-api>=1.25,<2",
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-mock>=3.14,<4",
  "pytest-cov>=5.0,<6",
  "mypy>=1.13,<2",
  "ruff>=0.5,<1",
]
# ADR-029: ColPali late-interaction visual retrieval, opt-in
# (COLPALI_ENABLED=false by default). A separate extra — not a core
# dependency — because colpali-engine pulls in a multi-GB vision-language
# model backbone via torch; every deployment that doesn't enable the
# feature must not pay that install cost.
colpali = [
  "colpali-engine>=0.3,<0.4",
]

[tool.uv.sources]
rag-core = { path = "../../packages/rag_core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["rag_ingestion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
# UP042: PageCategory intentionally uses str+Enum, not enum.StrEnum, to match
# rag_core.schemas's enum style (constructed from raw strings throughout the pipeline).
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
