[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-retrieval"
version = "0.1.0"
description = "Retrieval service for the Production RAG stack: hybrid search, RRF fusion, reranking, query expansion, and opt-in GraphRAG"
requires-python = ">=3.11"
dependencies = [
  "rag-core[opensearch]",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "structlog>=24.1,<25",
  "tenacity>=8.3,<9",
  "sentence-transformers>=3.0,<4",
  # Both transitive via sentence-transformers, which sets no floor of its
  # own (only transformers<5.0.0) — pin floors to stay off known-vulnerable
  # ranges (torch PYSEC-2025-203/204/206, CVE-2025-2999/3001; transformers
  # PYSEC-2025-217, PYSEC-2026-1977..1988/2290). See ADR-032.
  "torch>=2.10.0",
  "transformers>=4.53.0,<5",
  "neo4j>=5.20,<6",
  "openai>=1.40,<2",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "opentelemetry-api>=1.25,<2",
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-mock>=3.14,<4",
  "pytest-cov>=5.0,<6",
  "mypy>=1.13,<2",
  "ruff>=0.5,<1",
]

[tool.uv.sources]
rag-core = { path = "../../packages/rag_core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["rag_retrieval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
